Bug fix: height of the search modal on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,7 @@ body {
 
 #search_modal {
    width: 100%;
-   height: 100%;
+   height: 100vh;
    visibility: hidden;
    position: fixed;
    left: 0;
@@ -359,7 +359,7 @@ body {
    padding: var(--space-none);
    font-family: UncutSans-Variable, sans-serif;
    font-size: 18px;
-   font-weight: 400;
+   font-weight: 500;
    line-height: 1.4;
    letter-spacing: 0px;
    color: var(--color-text-primary);
